welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:5: error: missing parameter type
	else if (((speed => 61 && speed <= 80) && !(isBirthday)) || ((speed => 66 && speed <= 85) && (isBirthday))) {
                   ^caughtSpeeding:8: error: missing parameter type
	else if ((speed => 81 && !(isBirthday)) || (speed => 86 && (isBirthday))) {
                  ^caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
	else if ((speed => 81 && !(isBirthday)) || (speed => 86 && (isBirthday))) {
             ^